--- a/b_example/c_normal/css/src/gcass/commonBox/homeBox.css
+++ b/b_example/c_normal/css/src/gcass/commonBox/homeBox.css
@@ -10,7 +10,7 @@
 
 #homeBox a{display: block; width: 100%; height: 100%; background-color:inherit; text-align: center;
  line-height:1.875rem; color:#fff;
- background-image: url("../../../../img/gcass/homeBox/homeBox.png");
+ background-image: url("/'git경로'/img/gcass/homeBox/homeBox.png");
  background-repeat:no-repeat; /*background-position:50%*/
  background-position-y:0; }
 
@@ -18,18 +18,19 @@
 	color:#171717;}
 
 #homeBox ul>li>a:hover,
-#homeBox ul>li>a:focus{background-image: url("../../../../img/gcass/homeBox/homeBox_over.png");}
+#homeBox ul>li>a:focus{background-image: url("/'git경로'/img/gcass/homeBox/homeBox_over.png");}
+#homeBox ul>li:last-child>a:focus{position:static; background-color:#000cf2;}
 
-#homeBox ul>li:nth-child(1)>a{background-position-x: 0; /*background-image: url("../../../../img/gcass/homeBox/home.png");*/}	
-#homeBox ul>li:nth-child(2)>a{background-position-x: -95px; /*background-image: url("../../../../img/gcass/homeBox/study.png");*/}	
-#homeBox ul>li:nth-child(3)>a{background-position-x: -190px; /*background-image: url("../../../../img/gcass/homeBox/education.png");*/}	
+#homeBox ul>li:nth-child(1)>a{background-position-x: 0;}	
+#homeBox ul>li:nth-child(2)>a{background-position-x: -95px;}	
+#homeBox ul>li:nth-child(3)>a{background-position-x: -190px;}	
 
 #homeBox ul>li:last-child a:after{content:" "; display: block;
 	position: absolute; z-index: -1; top: 0; left: 0;
-  width: 50vw; height: 100%; background-color:inherit;}
+    width: 50vw; height: 100%; background-color:inherit;}
 
 #homeBox:before, #homeBox::before{content:" "; display: block;
 					position: absolute; z-index: -1; top: 0; left: 50%; margin-left:-50vw;
 					width: 100vw; height: 100%; background-color:inherit; }
-					
+
 /* ======================================== */
