--- a/b_example/c_normal/css/src/gcass/commonBox/homeBox.css
+++ b/b_example/c_normal/css/src/gcass/commonBox/homeBox.css
@@ -10,7 +10,7 @@
 
 #homeBox a{display: block; width: 100%; height: 100%; background-color:inherit; text-align: center;
  line-height:1.875rem; color:#fff;
- background-image: url("/'git경로'/img/gcass/homeBox/homeBox.png");
+ background-image: url("../../../../img/gcass/homeBox/homeBox.png");
  background-repeat:no-repeat; /*background-position:50%*/
  background-position-y:0; }
 
@@ -18,7 +18,9 @@
 	color:#171717;}
 
 #homeBox ul>li>a:hover,
-#homeBox ul>li>a:focus{background-image: url("/'git경로'/img/gcass/homeBox/homeBox_over.png");}
+#homeBox ul>li>a:focus{outline:none; background-image: url("../../../../img/gcass/homeBox/homeBox_over.png");}
+
+#homeBox ul>li:last-child>a:hover,
 #homeBox ul>li:last-child>a:focus{position:static; background-color:#000cf2;}
 
 #homeBox ul>li:nth-child(1)>a{background-position-x: 0;}	
