--- a/b_example/c_normal/css/src/gcass/mainPage/viewBox.css
+++ b/b_example/c_normal/css/src/gcass/mainPage/viewBox.css
@@ -5,11 +5,20 @@
 
 #viewBox:before, #viewBox::before{content:" "; display: block; 
         position: absolute; z-index:-1; top: 0; right: 50%; margin-right:-50vw;
-		width: 50vw; height: 100%; background-color:inherit;}
+		width: 50vw; height: 100%; background-color:inherit;} 
 
 #viewBox:after, #viewBox::after{ content:" "; display: block; 
      	position: absolute; top: 0; left: 0; z-index:-1;
-		width:100vw; height: 50px; background-color:#acf;}
+		width:100vw; height: 50px; 
+		background-image: url("../../../../img/gcass/viewBox/view_bg_mesh_pattern.png");
+		background-repeat:repeat-x; background-position:0 0;}
 
-#viewBox .com{margin: auto; margin-top: 5rem; width: 21.25rem; height: 34.375rem; background-color:#acf; transition:transform 500ms linear;}
+#viewBox .com_bg{position:absolute; bottom: 0; left: 0; width: 100%; height:100%;  
+	background-image: url("../../../../img/gcass/viewBox/view_bg_01_2.png"); 
+	background-repeat: no-repeat; background-position:80% 50%;}
+
+#viewBox .com{margin-left:10%; margin-top: 5rem; width: 21.25rem; height: 34.375rem; 
+	background-image: url("../../../../img/gcass/viewBox/view_bg_01_1.png");
+	background-repeat: no-repeat; background-position: 0 100%;
+	transition:transform 500ms linear;}
 #viewBox:hover .com{transform:translateX(5rem);}
