--- a/b_example/c_normal/css/base/reset.css
+++ b/b_example/c_normal/css/base/reset.css
@@ -12,7 +12,8 @@ ul,ol,li{list-style:none;}
 a{text-decoration: none; color:#f06;}
 button{border:0; border-radius:0; cursor:pointer;  background-color:transparent;}
 
-a:hover,a:focus, button:hover, button:focus{color:#fa0;}
+a:hover,a:focus, 
+button:hover, button:focus{color:#fa0;}
 a:focus, button:focus{
   outline:0.2rem solid #fa0; outline-offset:0.2rem; position: relative; z-index: 500;}
 
