--- a/b_example/a02_beginner/css/src/form_02.css
+++ b/b_example/a02_beginner/css/src/form_02.css
@@ -7,24 +7,62 @@
 h1{margin-bottom: 1rem; border-bottom: 1px solid  #333;}
 
 .box{padding: 1rem; background-color:#ffa; 
-	border-radius: 0.3rem;}
+	border-radius: 0.3rem; margin-bottom: 1rem;}
 
 h2{margin-bottom: 1.5rem; border-bottom: 1px solid  #333;
  font-size: 1.2rem; text-align: center;}
 
 form{width: 100%; height: auto; background-color:#ddd;}
-fieldset{border-color:#f06;}
+fieldset{border-color:#f06; margin-bottom: 2rem; border-style: solid; }
 /* 생각보다 작업하기 쉽지는 않은 영역 */
 legend{
 	padding:0.2rem 1rem; box-sizing:border-box; 
-	width: 100%; height:50px; background-color: #3aa;
-	line-height: 50px; color:#fff; font-weight: bold;
-	border-radius:0.7rem; margin-bottom: 1rem;}
+	width: 100%; height:30px; background-color: #3aa;
+	line-height: 30px; color:#fff; font-weight: bold;
+	border-radius:0.2rem; margin-bottom: 1rem;}
 
 /* */
 .form_basic1 input {
 	display:block; margin-bottom:1rem;
 	border:3px solid #333; box-sizing: border-box;
-	width:30rem; height:2rem; background-color:transparent;}
+	width:30rem; height:2rem; background-color:transparent;
+	text-indent:1rem;}
 .form_basic1 input:focus{ background-color:#fa0; border-color:#f06; }	
 
+/* ======================================== */
+.view input:focus{
+	position:relative; z-index: 500;
+	border:2px solid #fa0; background-color:#375;
+	color:#fff; outline:0;}
+
+fieldset div{border-top:1px solid #77a; margin-top: 1rem; padding-top: 1rem;}
+
+
+.radio input {width: 0; height: 0; position: relative; z-index: -100;}
+.radio label>i{display: inline-block; width: 1rem; height: 1rem; background-color:#fff; border-radius:50%;
+	transition:all 500ms;}
+
+.radio input:checked + label>i {background-color:#f06;}
+
+.checkbox input{width: 0; height: 0; position: absolute; z-index: -100;}
+
+.checkbox label{
+	position: relative;
+	margin-right: 1rem; 
+	padding-left: 3rem; background: #fff; 
+	border-top-left-radius:1rem;
+	border-bottom-left-radius:1rem;
+	height:3rem; font-size: 1.2rem;
+}
+
+.checkbox label>i{display: inline-block;
+	position: absolute;
+	top:0.2rem; left:0.2rem; border-radius:50%;
+	width: 1rem; height: 1rem; background-color:#0af;
+	transition:all 300ms ease;}
+
+.checkbox input:checked + label>i{
+	left: 1.5rem; background-color:#f06;}
+
+
+/* ======================= */
