--- a/b_example/a02_beginner/css/src/form_test_01.css
+++ b/b_example/a02_beginner/css/src/form_test_01.css
@@ -1,6 +1,6 @@
 /* form_test_01.css */
 
-form,fieldset, legend{margin: 0; padding: 0; border: 0;}
+form,fieldset, legend, label, input, button{margin: 0; padding: 0; border: 0;}
 
 #wrap{width: 100%; height: 100%;
 	background-color:#faf;}
@@ -20,15 +20,43 @@ form, fieldset{width:100%; height:100%;}
 
 .user{margin-bottom:10px;  width: 100%; height: 73px;}
 
-.user > dt{float:left; width:100px; height:32px; background-color: #acf;}
-.user > dd{float: right; width:140px; height:32px; background-color:#fac}
+.user > dt{float:left; width:100px; height:32px;
+	line-height: 32px; text-transform:uppercase;
+	word-spacing:-0.13rem; font-size:0.8rem;
+	font-family:"myriad pro", sans-serif;}
+
+.user > dd{float: right; width:140px; height:32px;}
 
 .user > dt:first-of-type,
 .user > dd:first-of-type{margin-bottom:9px;}
 
+.user label{width: 100%; height: 100%; color:#fff;}
+.user input{width: 100%; height: 100%; text-indent: 0.5rem;
+	background-color:rgba(255,255,255,0.5);
+	border-radius:3px;
+	border:2px solid #333; box-sizing: border-box;}
+
+::-webkit-placeholder{ color:#fff; }
+::-moz-placeholder{ color:#fff; }
+::-ms-placeholder{ color:#fff; }
+::-o-placeholder{ color:#fff; }
+::placeholder{ color:#fff; }
+
+.user input:focus{outline-color:#fff;}
+
 
 .check{width: 100%; height: 35px;}
-.check>p{float:left; padding-top: 8px; box-sizing:border-box;
-	width:100px; height:32px; background-color: #acf;
-	font-size:0.8rem}
-.check>div{float: right; width:140px; height:35px; background-color:#fac}
+.remember{float:left; padding-top: 8px; box-sizing:border-box;
+	width:100px; height:32px; font-size:0.8rem}
+
+.remember>input{border:0;}
+.remember>label{text-transform:capitalize; color:#fff;}
+
+.ok{float: right; width:140px; height:35px;}
+.ok>button{width: 100%; height: 100%; border-radius:3px; 
+		background-color:#3ae; font-weight: bold;
+		color:#fff; text-shadow:0 -0.05rem 0 #111;
+		box-shadow:0 -0.05rem 0 #226290;
+		border-top:1px solid #7fa;}
+
+.ok>button::first-letter{text-transform:capitalize;}
