--- a/b_example/a02_beginner/css/src/form_test_01.css
+++ b/b_example/a02_beginner/css/src/form_test_01.css
@@ -30,11 +30,19 @@ form, fieldset{width:100%; height:100%;}
 .user > dt:first-of-type,
 .user > dd:first-of-type{margin-bottom:9px;}
 
-.user label{width: 100%; height: 100%; color:#fff;}
-.user input{width: 100%; height: 100%; text-indent: 0.5rem;
+.user label{display: block; width: 100%; height: 100%; color:#fff;}
+.user input{display: block; width: 100%; height: 100%; text-indent: 0.5rem;
 	background-color:rgba(255,255,255,0.5);
 	border-radius:3px;
 	border:2px solid #333; box-sizing: border-box;}
+
+.user > dt:first-of-type label:before{ content:"user name";
+	color:#fff; word-spacing:-0.128rem; display: block; width: 100%; height: 100%;}
+
+
+
+
+
 
 ::-webkit-placeholder{ color:#fff; }
 ::-moz-placeholder{ color:#fff; }
