--- a/b_example/a02_beginner/css/src/div_form_join_01.css
+++ b/b_example/a02_beginner/css/src/div_form_join_01.css
@@ -1,3 +1,27 @@
 @charset "UTF-8";
 /* div_form_join_01.css */
 
+/*
+	lightPink: #ffa2bd;
+	pink:      #ff558d;
+	pinkDeep:  #90008d;
+	lightGray: #dfdfdf;
+	blue:      #1166c9;
+	white:     #fff;
+	black:     #171717;
+*/
+
+
+#wrap{margin: auto; padding:2.75rem 8.125rem; box-sizing:border-box;
+	width:960px; height:auto; min-height:10rem; background-color:#ccc;}
+
+h2{width: 100%; height: 3.25rem; background-color: #faa;}
+.member_info{width: 100%; height: 1.875rem; text-align:right; background-color: #aaf;}
+
+form,
+form>fieldset{width: 100%; height: auto;}
+
+form>fieldset:first-of-type{width: 100%; height:auto; min-height:35rem}
+form>fieldset:last-of-type{padding: 20px 200px; padding-bottom: 25px;
+	box-sizing: border-box;
+	width: 100%; height: 86px; background-color: #fca;}
