--- a/b_example/a02_beginner/css/src/div_form_join_01.css
+++ b/b_example/a02_beginner/css/src/div_form_join_01.css
@@ -17,27 +17,37 @@
 #wrap{margin: auto; padding:2.75rem 8.125rem; box-sizing:border-box;
 	width:960px; height:auto; min-height:10rem;}
 
-h2{width: 100%; height: 3.25rem; background-color: #faa;
+h2{padding-left:1rem; width: 100%; height: 3.25rem; 
 	font-size:2.5rem; font-family:'맑은고딕', malgun-gothic;}
 h2>i{float: left; margin-right: 0.2rem;  width:3.25rem; height:3.25rem; border-radius:50%; background-position:-0.625rem -3.25rem;}
 
-.member_info{width:100%; height:1.875rem; text-align:right; background-color:#aaf; font-size: 1.2rem;}
+.member_info{width:100%; height:1.875rem; text-align:right; font-size: 1.2rem;}
 .member_info>i{color:#1166c9;}
 
 form,
-form>fieldset{width: 100%; height: auto; background-color: #aadfdf;}
+form>fieldset{width: 100%; height: auto;}
 
-form>fieldset:first-of-type{width: 100%; height:auto; min-height:35rem}
-form>fieldset:last-of-type{padding: 20px 200px; padding-bottom: 25px;
-	box-sizing: border-box;
-	width: 100%; height: 86px; background-color: #fca;
-	border-bottom:1px solid #90008d;}
+form>fieldset:first-of-type{width: 100%; height:auto; min-height:10rem;
+	background-color: #ff558d;}
+
+/* fieldset:first-of-type ============================== */
+.join_form{width: 100%; height:auto; border-bottom:1px solid #fff;}
+.join_form:last-of-type{border: 0;}
+.join_form>dt{float: left; width:27%; height: 40px; background-color: #ffa2bd;}
+.join_form>dd{float: right; width: 70%; height: 40px; background-color: #dfdfdf;}
+
+
+
+/* fieldset:last-of-type ============================== */
+
+form>fieldset:last-of-type{padding: 20px 200px; padding-bottom: 25px; box-sizing: border-box;
+	width: 100%; height: 86px; border-bottom:1px solid #90008d;}
 
 input[type="reset"]{float: left; margin-top: 6px; border:1px solid #1166c9;
 	width: 110px; height: 30px; background-color: #fff; color:#171717;
 	border-radius:2px;}
 
-input[type="submit"]{float: right; border: 0; width: 150px; height: 100%;
+input[type="submit"]{float: right; margin-right: -30px; margin-top: -5px; border: 0; width: 150px; height: 100%;
 	background-color: #1166c9; color:#fff; font-weight: bold; 
 	letter-spacing:2rem; text-indent:2rem; text-shadow:1px 1px 0 #171717;
 	border-radius:2px; background-position: -12px -258px;}
