--- a/b_example/a02_beginner/css/src/div_form_join_01.css
+++ b/b_example/a02_beginner/css/src/div_form_join_01.css
@@ -82,6 +82,10 @@ form>fieldset:first-of-type{width: 100%; height:auto; min-height:10rem;
 	background-position:-45px -126px;}
 .plus{background-position:-11px -126px;}
 
+.gender label{float: left; width: 80px; height: 26px; margin-right:30px; line-height:26px; font-size:1.5rem; font-family:"맑은고딕",malgum-gothic;}
+.gender i{float: left; width: 26px; height: 26px; background-position:-45px -170px;}
+.gender input[type="radio"]{position: relative; z-index: -1; width: 0; height: 0; overflow: hidden; }
+.gender input[type="radio"]:checked + label>i{background-position-x:-10px;}
 
 /* fieldset:last-of-type ============================== */
 
