--- a/b_example/a02_beginner/css/src/div_form_join_01.css
+++ b/b_example/a02_beginner/css/src/div_form_join_01.css
@@ -87,6 +87,28 @@ form>fieldset:first-of-type{width: 100%; height:auto; min-height:10rem;
 .gender input[type="radio"]{position: relative; z-index: -1; width: 0; height: 0; overflow: hidden; }
 .gender input[type="radio"]:checked + label>i{background-position-x:-10px;}
 
+
+/* ---------------- */
+.telecom_check{margin-bottom: 10px; width: 100%; height: 28px;}
+.telecom_check>input{position: relative; z-index: -1; width: 0; height: 0; overflow: hidden; margin: 0;}
+.telecom_check>label{width: 80px; height: 26px; margin-right: 30px;
+	text-transform: uppercase; font-family:"맑은고딕", malgum-gothic; font-size:1.5rem; word-spacing:-0.5rem;
+	vertical-align: top;}
+.telecom_check>label:last-of-type{margin-right: 0;}
+
+/* 
+ vertical-align: top | middle | baseline | bottom;
+ inline-block형식의 요소에 세로 정렬을 하는 속성
+*/
+
+label[for="member_08-2"]:after{content:"U+"; vertical-align: top;}
+.telecom_check i{display: inline-block; width: 26px; height: 26px; background-position: -45px -170px;}
+.telecom_check input:checked + label>i{background-position-x:-10px;}
+
+.tel_number{width: 100%; height: 28px; background-color: #fca;}
+
+
+
 /* fieldset:last-of-type ============================== */
 
 form>fieldset:last-of-type{padding: 20px 200px; padding-bottom: 25px; box-sizing: border-box;
