--- a/b_example/a02_beginner/css/src/div_form_join_01.css
+++ b/b_example/a02_beginner/css/src/div_form_join_01.css
@@ -96,6 +96,8 @@ form>fieldset:first-of-type{width: 100%; height:auto; min-height:10rem;
 	vertical-align: top;}
 .telecom_check>label:last-of-type{margin-right: 0;}
 
+
+
 /* 
  vertical-align: top | middle | baseline | bottom;
  inline-block형식의 요소에 세로 정렬을 하는 속성
@@ -105,9 +107,21 @@ label[for="member_08-2"]:after{content:"U+"; vertical-align: top;}
 .telecom_check i{display: inline-block; width: 26px; height: 26px; background-position: -45px -170px;}
 .telecom_check input:checked + label>i{background-position-x:-10px;}
 
-.tel_number{width: 100%; height: 28px; background-color: #fca;}
+.tel_number{width: 100%; height: 28px;}
+.tel_number>.text-box{width: 30%; height: 100%;}
+.tel_number>span{margin-right: 0.2rem;}
 
+/* ------------------------ */
+.favorite>input{margin: 0; position: relative; z-index: -1; width: 0; height: 0; overflow: hidden;}
+.favorite>label{width: 80px; height: 26px; margin-right: 30px;
+	text-transform: uppercase; font-family:"맑은고딕", malgum-gothic; font-size:1.5rem; word-spacing:-0.5rem;
+	vertical-align: top;}
+.favorite>label:last-of-type{margin-right: 0;}
+.favorite>label>i{display:inline-block; width: 26px; height: 26px; background-position: -45px -213px;}	
+.favorite>input:checked + label>i{background-position-x:-10px;}
 
+#member_10{width: 100%; height: auto; min-height: 10rem; border:2px solid #1166c9; box-sizing: border-box;
+			font-size: 1.1rem; font-family:"맑은고딕",malgum-gothic; line-height:120%;}
 
 /* fieldset:last-of-type ============================== */
 
